# ColumnFileHelpers

./: .gitignore  CMakeLists.txt  README.md
doc/: ColumnFileHelpers.tex
src/: colsum.cpp  csv2tex.cpp  rowFilter.cpp  rowmerge.cpp
test/colsum/: test2.txt  test3.txt  test4.txt
test/rowmerge/: test1.txt  test2.txt  test3.txt
